# strict_df

./: .dockerignore  .gitignore  404.html  Dockerfile  LICENSE  Pipfile  README.md  index.html  mkdocs.yml  requirements-dev.txt  requirements.txt  search.html  setup.cfg  setup.py
about/: index.html
developers/: index.html
docs/: about.md  developers.md  index.md
examples/notebooks/: Fligoo.ipynb  StrictDf.ipynb
scripts/: build_docker.sh  create_env.sh  generate_requirements.sh  helpers.sh  install_spark.sh  library_create.bat  library_create.sh  run_test_alpine.sh  run_tests.sh
search/: search_index.json
src/strictdf/: StrictDataFrame.py  __init__.py  __main__.py
src/strictdf/utils/: dataset.py  dtypes.py  helpers.py
strictdf/strictdf/: StrictDataFrame.py  __init__.py
strictdf/tests/: test_strict_df.py  test_utils.py
strictdf/utils/: dataset.py  dtypes.py
tests/: test_strict_df.py  test_utils.py
