[metadata]
name = strictdf
# Version needs regex in setup.py.
url = https://palletsprojects.com/p/flask
project_urls =
    Documentation = https://flask.palletsprojects.com/
    Code = https://github.com/pallets/flask
    Issue tracker = https://github.com/pallets/flask/issues
license = MIT
author = Cristian Contrera
author_email = cristiancontrera95@gmail.com
maintainer = Cristian Contrera
maintainer_email = cristiancontrera95@gmail.com
description = Pandas Data Frames without mixed dtypes columns

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.9

[options.packages.find]
where = src

[coverage:run]
branch = True
source =
    src

[coverage:paths]
source =
    src

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # line break before bin-op, invalid
    W503
    # line break after bin-op, invalid
    W504

max-line-length = 120
per-file-ignores =
    # __init__ module exports names
    src/strictdf/__init__.py: F401